--- a/packages/nfd-fetch/package.json
+++ b/packages/nfd-fetch/package.json
@@ -2,6 +2,7 @@
   "name": "@awesome-algorand/nfd-fetch",
   "description": "Generated fetch library for NF Domains",
   "version": "0.0.1-experimental.2",
+  "type": "module",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "files": [
